--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/node": "^20",
